Fixed menu spacing

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,10 +1,19 @@
+.header {
+	margin: 2% 5% 2% 5%;
+}
+.header__login {
+	display: flex;
+	justify-content: space-between;
+}
+.header__nav {
+	display: flex;
+	justify-content: space-between;
+}
+
 .header__intro {
 	display: flex;
 	margin: 2% 5% 2% 5%;
 	justify-content: space-between;
-	/* max-width: 1500px; */
-	/* margin-left: auto; */
-	/* margin-right: auto; */
 }
 .header__intro > h1 {
 	font-size: 68px;
